@startuml

package com.rickensteven.sirkwie.core {
    !include dkd-core-domain.puml
    !include dkd-core-building.puml
    !include dkd-core-exception.puml
    !include dkd-core-parsing.puml
    !include dkd-core-validation.puml

    left to right direction

    class CircuitFileReader {
        +read(filePath: String): String
    }

    class CircuitLoaderFacade {
        +CircuitLoaderFacade()
        +CircuitLoaderFacade(circuitParser: ICircuitParser)
        +loadCircuit(filePath: String): Circuit
        +setCircuitParser(circuitParser: ICircuitParser)
        +addSimulationListener(simulationListener: ISimulationListener)
    }
    CircuitLoaderFacade --> "0..*" ISimulationListener : -simulationListeners
    CircuitLoaderFacade --> "1" CircuitFileReader : -circuitFileReader
    CircuitLoaderFacade --> "1" CircuitNotConnectedValidator : -circuitNotConnectedValidator
    CircuitLoaderFacade --> "1" CircuitInfiniteLoopValidator : -circuitInfiniteLoopValidator
    CircuitLoaderFacade --> "1" ICircuitParser : -circuitParser

    class PropagationDelayCalculator implements ISimulationListener {
        -history: Map<String, PropagationNode>

        +onStartCalculate(node: Node)
        +onStopCalculate(node: Node, calculatedValue: boolean)
        +calculate(): double
        -calculateDepth(): int
    }
    PropagationDelayCalculator --> "0..*" PropagationNode : -root

    class PropagationNode {
        ~children: List<PropagationNode>
    }
    PropagationDelayCalculator +-- PropagationNode

    interface ISimulationListener {
        onStartSimulation();
        onStopSimulation();
        onStartCalculate(node: Node);
        onStopCalculate(node: Node, calculatedValue: boolean);
    }
}

@enduml